# HoN-Patch-Notes-Game-Bot

./: .gitignore  LICENSE  README.md  pyproject.toml  scripts.sh  tmux_start.sh
.github/workflows/: .github_ci.yml  github_ci.yml  python-package.yml
docs/: Resources.md
hon_patch_notes_game_bot/: comment_parser.py  communications.py  core.py  database.py  db.json  main.py  patch_notes_file_handler.py  submission_content.md  user.py  user_tracker.py  util.py  utils.py
hon_patch_notes_game_bot/cache/: winners_list.txt
hon_patch_notes_game_bot/config/: community_patch_notes_compilation.md  config.py  submission_content.md
patch_notes_game_bot/: comment_parser.py  main.py
tests/: conftest.py  test_communications.py  test_core.py  test_database.py  test_main.py  test_patch_notes_file_handler.py  test_patch_notes_game_bot.py  test_user.py  test_util.py  test_utils.py
tests/cache/: db_test.json  winners_list.txt
tests/config/: community_patch_notes_compilation.md  reward_codes.txt  submission_content.md
