[tool.poetry]
authors = ["William Lam <w.lam@honteam.com>"]
description = ""
name = "hon_patch_notes_game_bot"
version = "0.1.0"

[tool.poetry.dependencies]
praw = "^7.1.4"
prawcore = "^1.5.0"
python = "^3.8"
python-dateutil = "^2.8.1"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
