[tool.poetry]
authors = ["William Lam <w.lam@honteam.com>"]
description = ""
name = "hon_patch_notes_game_bot"
version = "0.2.4.0"

[tool.poetry.dependencies]
praw = "^7.3.0"
prawcore = "^2.0.0"
python = "^3.7"
python-dateutil = "^2.8.1"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
